# zentinel-agent-spiffe

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: ci.yml  release.yml
proto/: workload.proto
src/: allowlist.rs  config.rs  main.rs
src/spiffe/: mod.rs  validation.rs  workload_api.rs
