[package]
name = "sentinel-agent-spiffe"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-spiffe"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/agents/spiffe"
description = "SPIFFE/SPIRE workload identity agent for Sentinel reverse proxy"
keywords = ["proxy", "reverse-proxy", "agent", "spiffe", "spire", "zero-trust"]
categories = ["network-programming", "authentication"]
readme = "README.md"

[[bin]]
name = "sentinel-spiffe-agent"
path = "src/main.rs"

[dependencies]
# Sentinel protocol
sentinel-agent-protocol = { path = "../sentinel/crates/agent-protocol" }

# Async runtime
tokio = { version = "1.40", features = ["full", "net"] }
async-trait = "0.1"

# gRPC for SPIRE Workload API
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
prost-types = "0.13"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }

# X.509 certificate parsing
x509-parser = { version = "0.16", features = ["verify"] }
rustls-pemfile = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
base64 = "0.22"
urlencoding = "2.1"

# Pattern matching
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP types for header constants
http = "1.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"
